--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         
         <div class="side-images left">
-            <img src="images/sad-image-left.png">
+            <img src="sad-image-left.png">
         </div>
 
 
@@ -27,7 +27,7 @@
 
     <div>
         <div class="side-images right">
-            <img src="images/sad-image-right.png">
+            <img src="sad-image-right.png">
         </div>
     </div>
 
