--- a/yes.html
+++ b/yes.html
@@ -16,14 +16,14 @@
 
         <div class="gif-text-container">
             <div class="gif-container">
-                <img src="images/peeposhy-pepeshy.gif" alt="Thank You GIF">
+                <img src="peeposhy-pepeshy.gif" alt="Thank You GIF">
             </div>
             <div class="thank-you-text">
                 Thank you for forgiving me!
             </div>
             <div class="photo-gallery">
                 <div class="photo">
-                    <img src="images/rizz.gif" alt="Right GIF">
+                    <img src="rizz.gif" alt="Right GIF">
             </div>
         </div>
     </div>
